# clube-assinatura

./: .gitignore  main.py  pyproject.toml
src/clube_assinatura/: db.py  settings.py
src/clube_assinatura/handlers/: stripe_payments.py
src/clube_assinatura/models/: customer.py  payment.py  plan.py  subscription.py
src/clube_assinatura/routers/: stripe.py
